# project-keeper

./: Cargo.toml  LICENSE  README.md
src/: main.bak.rs  main.rs
src/ui/: columns.rs  model.rs  user_interface.rs
src/ui/glade/: gtk_layout.glade  gtk_layout.glade~  new_project.glade  new_project.glade~
